@@ -1,5 +1,6 @@
 2.1.0
 -----
+1. Re-add all album sorts from Cantata 1.x
 
 2.0.0
 -----
